javassist version update